--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu May  3 08:26:40 2018</p>
+         Last Run: Thu May  3 15:57:32 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Thu May  3 19:00:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Thu May  3 20:30:00 2018</H4>
@@ -31,51 +31,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>0</td>
+                        <td>21</td>
+                        <td>1</td>
+                        <td>23</td>
+                        <td>WNW</td>
+                        <td>79</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
                         <td>24</td>
-                        <td>1</td>
-                        <td>18</td>
-                        <td>WNW</td>
-                        <td>82</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
                         <td>0</td>
-                        <td>27</td>
-                        <td>0</td>
-                        <td>14</td>
+                        <td>19</td>
                         <td>WNW</td>
-                        <td>74</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>71</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>65</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,8 +120,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "21",
                  "20",
-                 "19",
                  "18",
                  "15"
                ]
@@ -132,8 +132,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "21",
                  "20",
-                 "19",
                  "18",
                  "15"
                ]
@@ -198,10 +198,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "21",
                  "24",
-                 "27",
-                 "31",
-                 "38"
+                 "30",
+                 "37"
                ]
              },
              {
@@ -209,10 +209,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "82",
-                 "74",
-                 "71",
-                 "65"
+                 "79",
+                 "59",
+                 "47",
+                 "43"
                ]
              }
            ]
@@ -224,12 +224,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <iframe width="100%" height="400" border="0" src="https://maps.darksky.net/@radar,50.9508901,-114.0435061,10?embed=true&timeControl=true&fieldControl=true&defaultField=radar&defaultUnits=_c"></iframe>
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu May  3 08:26:40 2018</p>
+         Last Run: Thu May  3 15:57:32 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - CSC Field 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May  5 19:00:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May  5 20:30:00 2018</H4>
@@ -251,15 +252,15 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>36</td>
+                        <td>38</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>63</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -267,35 +268,35 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>50</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>0</td>
-                        <td>42</td>
+                        <td>1</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>3</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -409,8 +410,8 @@
                "data":[
                  "15",
                  "15",
-                 "0",
-                 "1"
+                 "1",
+                 "2"
                ]
              },
              {
@@ -418,9 +419,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
                  "38",
-                 "42",
+                 "39",
+                 "43",
                  "51"
                ]
              },
@@ -429,10 +430,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "50",
-                 "12",
-                 "3"
+                 "57",
+                 "47",
+                 "15",
+                 "9"
                ]
              }
            ]
@@ -449,7 +450,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu May  3 08:26:40 2018</p>
+         Last Run: Thu May  3 15:57:32 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Shouldice  Stampeder (Shouldice Athletic Park)</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Mon May  7 20:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Mon May  7 21:45:00 2018</H4>
@@ -471,51 +472,51 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Overcast</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
-                        <td>37</td>
+                        <td>Thunderstorm</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>73</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>87</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>6</td>
-                        <td>42</td>
+                        <td>Thunderstorm</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>73</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>60</td>
+                        <td>ESE</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>2</td>
-                        <td>50</td>
+                        <td>Thunderstorm</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>72</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SE</td>
-                        <td>48</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>3</td>
-                        <td>54</td>
+                        <td>Chance of Rain</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>60</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SSE</td>
-                        <td>47</td>
+                        <td>S</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -560,10 +561,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
                  "18",
-                 "16",
-                 "15"
+                 "17",
+                 "15",
+                 "14"
                ]
              },
              {
@@ -572,10 +573,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
                  "18",
-                 "16",
-                 "15"
+                 "17",
+                 "15",
+                 "14"
                ]
              }
            ]
@@ -627,10 +628,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "6",
-                 "2",
-                 "3"
+                 "73",
+                 "73",
+                 "72",
+                 "60"
                ]
              },
              {
@@ -638,10 +639,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "42",
-                 "50",
-                 "54"
+                 "43",
+                 "48",
+                 "56",
+                 "60"
                ]
              },
              {
@@ -649,10 +650,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "60",
-                 "48",
-                 "47"
+                 "84",
+                 "85",
+                 "86",
+                 "88"
                ]
              }
            ]
@@ -669,7 +670,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu May  3 08:26:40 2018</p>
+         Last Run: Thu May  3 15:57:32 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Tue May  8 19:30:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Tue May  8 21:00:00 2018</H4>
@@ -695,35 +696,35 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>36</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>50</td>
+                        <td>37</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>ENE</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>0</td>
-                        <td>41</td>
+                        <td>3</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>53</td>
+                        <td>NE</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>1</td>
-                        <td>47</td>
+                        <td>17</td>
+                        <td>49</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SE</td>
-                        <td>54</td>
+                        <td>13</td>
+                        <td>NE</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -832,8 +833,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "1"
+                 "3",
+                 "17"
                ]
              },
              {
@@ -841,9 +842,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "41",
-                 "47"
+                 "37",
+                 "43",
+                 "49"
                ]
              },
              {
@@ -851,9 +852,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "53",
-                 "54"
+                 "41",
+                 "39",
+                 "37"
                ]
              }
            ]
