--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 08:18:33 2018</p>
+         Last Run: Mon May  7 11:46:38 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Shouldice  Stampeder (Shouldice Athletic Park)</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Mon May  7 20:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Mon May  7 21:45:00 2018</H4>
@@ -31,51 +31,51 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Overcast</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
-                        <td>30</td>
+                        <td>Chance of Rain</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>35</td>
+                        <td>31</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>30</td>
-                        <td>35</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>36</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>94</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>40</td>
-                        <td>44</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>32</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>95</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>41</td>
-                        <td>51</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>39</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>95</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,10 +120,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
                  "19",
-                 "17",
-                 "16"
+                 "18",
+                 "16",
+                 "14"
                ]
              },
              {
@@ -132,10 +132,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
                  "19",
-                 "17",
-                 "16"
+                 "18",
+                 "16",
+                 "14"
                ]
              }
            ]
@@ -187,10 +187,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "30",
-                 "40",
-                 "41"
+                 "35",
+                 "36",
+                 "32",
+                 "39"
                ]
              },
              {
@@ -198,10 +198,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "35",
-                 "44",
-                 "51"
+                 "31",
+                 "39",
+                 "48",
+                 "55"
                ]
              },
              {
@@ -209,10 +209,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "94",
-                 "95",
-                 "95"
+                 "92",
+                 "88",
+                 "92",
+                 "98"
                ]
              }
            ]
@@ -229,10 +229,10 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 08:18:33 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Tue May  8 19:30:00 2018</H4>
-               <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Tue May  8 21:00:00 2018</H4>
+         Last Run: Mon May  7 11:46:38 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May 12 12:00:00 2018</H4>
+               <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May 12 13:30:00 2018</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -250,40 +250,52 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
+                        <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>3</td>
-                        <td>30</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>N</td>
-                        <td>28</td>
-                     </tr>
-                     <tr>
-                        <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>0</td>
+                        <td>34</td>
+                        <td>4</td>
+                        <td>11</td>
+                        <td>NW</td>
                         <td>2</td>
-                        <td>33</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>N</td>
-                        <td>27</td>
                      </tr>
                      <tr>
-                        <td>09:00 PM</td>
+                        <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>29</td>
+                        <td>5</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>2</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>NNE</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>6</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>13</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>0</td>
+                        <td>26</td>
+                        <td>6</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -316,9 +328,10 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
-             "08:00 PM",
-             "09:00 PM"
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
            ],
            "datasets":[
              {
@@ -327,9 +340,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
-                 "19",
-                 "17"
+                 "16",
+                 "17",
+                 "18",
+                 "18"
                ]
              },
              {
@@ -338,9 +352,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
-                 "19",
-                 "17"
+                 "16",
+                 "17",
+                 "18",
+                 "18"
                ]
              }
            ]
@@ -381,9 +396,10 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
-             "08:00 PM",
-             "09:00 PM"
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
            ],
            "datasets":[
              {
@@ -391,8 +407,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "2",
+                 "0",
+                 "0",
+                 "0",
                  "0"
                ]
              },
@@ -401,9 +418,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "33",
-                 "40"
+                 "34",
+                 "29",
+                 "27",
+                 "26"
                ]
              },
              {
@@ -411,9 +429,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "27",
-                 "28"
+                 "2",
+                 "2",
+                 "13",
+                 "34"
                ]
              }
            ]
@@ -430,7 +449,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "http://www.wunderground.com/">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 08:18:33 2018</p>
+         Last Run: Mon May  7 11:46:38 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May 12 13:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May 12 14:45:00 2018</H4>
@@ -453,14 +472,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -468,23 +487,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>26</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>24</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>33</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -492,11 +511,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>47</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -541,9 +560,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
                  "18",
                  "18",
+                 "19",
                  "19"
                ]
              },
@@ -553,9 +572,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
                  "18",
                  "18",
+                 "19",
                  "19"
                ]
              }
@@ -619,10 +638,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "28",
+                 "29",
                  "26",
-                 "25"
+                 "24",
+                 "24"
                ]
              },
              {
@@ -630,10 +649,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "13",
-                 "33",
-                 "47"
+                 "2",
+                 "12",
+                 "31",
+                 "44"
                ]
              }
            ]
