--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:08:40 2018</p>
+         Last Run: Mon May  7 16:10:39 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Shouldice  Stampeder (Shouldice Athletic Park)</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Mon May  7 20:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Mon May  7 21:45:00 2018</H4>
@@ -224,13 +224,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
-         http://www.wmiradar.com/alberta/latest_loop.gif
+         <img scr="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:08:40 2018</p>
+         Last Run: Mon May  7 16:10:39 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Tue May  8 19:30:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Tue May  8 21:00:00 2018</H4>
@@ -431,7 +431,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:08:40 2018</p>
+         Last Run: Mon May  7 16:10:39 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May 12 13:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May 12 14:45:00 2018</H4>
