--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 21:05:06 2018</p>
+         Last Run: Mon Jul  9 22:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>7</td>
-                        <td>54</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>8</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NW</td>
-                        <td>63</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>18</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>NW</td>
-                        <td>67</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>18</td>
+                        <td>22</td>
                         <td>58</td>
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>72</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,8 +106,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "19",
-                 "19",
+                 "20",
+                 "20",
                  "18"
                ]
              },
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "19",
-                 "19",
+                 "20",
+                 "20",
                  "18"
                ]
              }
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "19",
-                 "18"
+                 "8",
+                 "18",
+                 "22"
                ]
              },
              {
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "52",
                  "51",
                  "58"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "67",
-                 "72"
+                 "61",
+                 "64",
+                 "75"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 21:05:06 2018</p>
+         Last Run: Mon Jul  9 22:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>33</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>27</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -258,9 +258,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
                         <td>20</td>
                      </tr>
@@ -416,7 +416,7 @@
                "data":[
                  "31",
                  "31",
-                 "33",
+                 "32",
                  "36",
                  "43"
                ]
@@ -426,8 +426,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "27",
+                 "31",
+                 "26",
                  "20",
                  "10",
                  "5"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 21:05:06 2018</p>
+         Last Run: Mon Jul  9 22:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul  9 21:05:06 2018</p>
+         Last Run: Mon Jul  9 22:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -713,56 +713,56 @@
                         <td>59</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NW</td>
-                        <td>52</td>
+                        <td>WNW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>4</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>3</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>WNW</td>
                         <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>4</td>
                         <td>52</td>
                         <td>4</td>
                         <td>18</td>
                         <td>W</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>8</td>
+                        <td>7</td>
                         <td>47</td>
                         <td>5</td>
                         <td>18</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>42</td>
                         <td>5</td>
                         <td>14</td>
-                        <td>W</td>
-                        <td>65</td>
+                        <td>WSW</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -809,8 +809,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "14",
-                 "15",
-                 "15",
+                 "14",
+                 "14",
                  "15",
                  "17"
                ]
@@ -822,8 +822,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "14",
-                 "15",
-                 "15",
+                 "14",
+                 "14",
                  "15",
                  "17"
                ]
@@ -881,8 +881,8 @@
                  "6",
                  "4",
                  "4",
-                 "8",
-                 "7"
+                 "7",
+                 "6"
                ]
              },
              {
@@ -891,7 +891,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "59",
-                 "54",
+                 "53",
                  "52",
                  "47",
                  "42"
@@ -902,11 +902,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
+                 "51",
                  "53",
-                 "55",
-                 "58",
-                 "65"
+                 "54",
+                 "56",
+                 "63"
                ]
              }
            ]
