--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 09:05:25 2018</p>
+         Last Run: Tue Jul 10 10:05:35 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>11</td>
-                        <td>53</td>
+                        <td>12</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>53</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>17</td>
-                        <td>57</td>
+                        <td>18</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>46</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>18</td>
-                        <td>65</td>
+                        <td>24</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>NW</td>
-                        <td>41</td>
+                        <td>NNW</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "17",
-                 "18"
+                 "12",
+                 "18",
+                 "24"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "57",
-                 "65"
+                 "55",
+                 "56",
+                 "64"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "46",
-                 "41"
+                 "57",
+                 "48",
+                 "45"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 09:05:25 2018</p>
+         Last Run: Tue Jul 10 10:05:35 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>4</td>
                         <td>8</td>
                         <td>S</td>
@@ -250,7 +250,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -262,7 +262,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -272,9 +272,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -414,7 +414,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "30",
                  "29",
                  "31",
                  "35",
@@ -427,9 +427,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "14",
-                 "10",
-                 "4",
+                 "15",
+                 "11",
+                 "5",
                  "1"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 09:05:25 2018</p>
+         Last Run: Tue Jul 10 10:05:35 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 09:05:25 2018</p>
+         Last Run: Tue Jul 10 10:05:35 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -724,19 +724,19 @@
                         <td>0</td>
                         <td>49</td>
                         <td>3</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>SSW</td>
                         <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>4</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>S</td>
                         <td>9</td>
                      </tr>
@@ -746,7 +746,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>6</td>
                         <td>18</td>
                         <td>S</td>
@@ -810,7 +810,7 @@
                "data":[
                  "14",
                  "16",
-                 "18",
+                 "17",
                  "19",
                  "20"
                ]
@@ -823,7 +823,7 @@
                "data":[
                  "14",
                  "16",
-                 "18",
+                 "17",
                  "19",
                  "20"
                ]
@@ -892,8 +892,8 @@
                "data":[
                  "57",
                  "49",
-                 "43",
-                 "38",
+                 "44",
+                 "39",
                  "36"
                ]
              },
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 09:05:25 2018</p>
+         Last Run: Tue Jul 10 10:05:35 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -952,7 +952,7 @@
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -964,7 +964,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -974,7 +974,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SE</td>
                         <td>19</td>
                      </tr>
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
                  "24",
+                 "23",
                  "19"
                ]
              }
