--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 10:05:35 2018</p>
+         Last Run: Tue Jul 10 11:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,22 +30,22 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>12</td>
-                        <td>55</td>
+                        <td>9</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>57</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>18</td>
+                        <td>17</td>
                         <td>56</td>
                         <td>0</td>
                         <td>19</td>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "18",
+                 "9",
+                 "17",
                  "24"
                ]
              },
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "54",
                  "56",
                  "64"
                ]
@@ -190,7 +190,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "60",
                  "48",
                  "45"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 10:05:35 2018</p>
+         Last Run: Tue Jul 10 11:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 10:05:35 2018</p>
+         Last Run: Tue Jul 10 11:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 10:05:35 2018</p>
+         Last Run: Tue Jul 10 11:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -724,15 +724,15 @@
                         <td>0</td>
                         <td>49</td>
                         <td>3</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>SSW</td>
                         <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>44</td>
                         <td>4</td>
@@ -746,7 +746,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>6</td>
                         <td>18</td>
                         <td>S</td>
@@ -810,7 +810,7 @@
                "data":[
                  "14",
                  "16",
-                 "17",
+                 "18",
                  "19",
                  "20"
                ]
@@ -823,7 +823,7 @@
                "data":[
                  "14",
                  "16",
-                 "17",
+                 "18",
                  "19",
                  "20"
                ]
@@ -893,7 +893,7 @@
                  "57",
                  "49",
                  "44",
-                 "39",
+                 "38",
                  "36"
                ]
              },
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 10:05:35 2018</p>
+         Last Run: Tue Jul 10 11:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -960,7 +960,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -976,7 +976,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -1095,7 +1095,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "26",
-                 "29",
+                 "30",
                  "35"
                ]
              },
@@ -1106,7 +1106,7 @@
                "data":[
                  "24",
                  "23",
-                 "19"
+                 "18"
                ]
              }
            ]
